5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1637_1053.log
== TEST (2019-04-05 19:12:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if nome = "cervo":
	print("eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 5
    if nome = "cervo":
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:12:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if nome = 'cervo':
	print("eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 5
    if nome = 'cervo':
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:12:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if (nome = 'cervo'):
	print("eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 5
    if (nome = 'cervo'):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:12:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if nome == "cervo":
	print("eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")
-- OUTPUT:
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:13:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if nome == "cervo":
	print("eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")
-- OUTPUT:
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:13:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if nome == "cervo":
	print("eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.269322
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:13:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if nome == "cervo":
	print("eh patrono do Harry Potter")
else:
	print(nome+" nao eh patrono do Harry Potter")
-- OUTPUT:
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:13:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if nome == "cervo":
	print("eh patrono do Harry Potter")
else:
	print(nome+" nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.1248
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:14:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if nome == "cervo":
	print("eh patrono do Harry Potter")
else:
	print(nome+" nao eh patrono do Harry Potter")
-- OUTPUT:
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:15:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if nome == "cervo":
	print("eh patrono do Harry Potter")
else:
	print(nome+" na
			
			o eh patrono do Harry Potter")
-- EXECUTION TIME:
0.277572
-- ERROR:
  File "/home/codebench/codes/1637/1053/main.py", line 8
    print(nome+" na
                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:15:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if nome == "cervo":
	print("eh patrono do Harry Potter")
else:
	print(nome+" na
			
			o eh patrono do Harry Potter")
-- EXECUTION TIME:
0.385035
-- ERROR:
  File "/home/codebench/codes/1637/1053/main.py", line 8
    print(nome+" na
                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:15:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if nome == "cervo":
	print("eh patrono do Harry Potter")
else:
	print(nome+" na
			
			o eh patrono do Harry Potter")
-- EXECUTION TIME:
0.412724
-- ERROR:
  File "/home/codebench/codes/1637/1053/main.py", line 8
    print(nome+" na
                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:15:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if nome == "cervo":
	print("eh patrono do Harry Potter")
else:
	print(nome+" na
			
			o eh patrono do Harry Potter")
-- EXECUTION TIME:
0.395009
-- ERROR:
  File "/home/codebench/codes/1637/1053/main.py", line 8
    print(nome+" na
                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:16:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
nome = input()
if nome == "cervo":
	print("cervo eh patrono do Harry Potter")
else:
	print(nome+" nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.131035
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
